--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 </header>
 <body>
-  <p>Play</p>
+  <h2>Play Sekiro bro! Sekiro: Shadows Die Twice is a 2019 action-adventure game developed by FromSoftware and published by Activision. The game follows a shinobi known as Wolf as he attempts to take revenge on a samurai clan who attacked him and kidnapped his lord.</h2>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTg2dB0dqnhnTHj8uCYRtYzU_j4WcryxzkWFQ&usqp=CAU"></img>
 </body>
 </html>
